--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">⚡ SMART RELAY</div>
+            <div class="logo">⚡ SMART RELAY IoT</div>
             <div class="time-date">
                 <div class="time" id="current-time">00:00:00</div>
                 <div class="date" id="current-date">Loading...</div>
@@ -594,3 +594,4 @@
     </script>
 </body>
 </html>
+
