--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">⚡ SMART RELAY</div>
+            <div class="logo">⚡ SMART RELAY IOT</div>
             <div class="time-date">
                 <div class="time" id="current-time">00:00:00</div>
                 <div class="date" id="current-date">Loading...</div>
@@ -702,3 +702,4 @@
     </script>
 </body>
 </html>
+
